editing html and adding new files

--- a/tabs.html
+++ b/tabs.html
@@ -12,25 +12,25 @@
         <div class="tabs">
             <div class="tab active" data-tab="tab1">
                 <div class="icons">
-                    <img src="arrow-right-black.svg">
-                    <img src="arrow-right-blue.svg">
+                    <img src="img/arrow-right-black.svg">
+                    <img src="img/arrow-right-blue.svg">
                 </div>
                 <div class="heading">Tab1</div>
             </div>
             <div class="tab" data-tab="tab2">
                 <div class="mr-8 icons">
-                    <img src="audio-black.svg">
-                    <img src="audio-blue.svg">
+                    <img src="img/audio-black.svg">
+                    <img src="img/audio-blue.svg">
                 </div>
                 <div class="heading">Tab2</div>
             </div>
         </div>
         <div class="tabs-items">
             <div id="tab1" class="tabs-item">
-                Qwerty...
+                Qwerty1...
             </div>
             <div id="tab2" class="tabs-item none">
-                Qwerty...
+                Qwerty2...
             </div>
         </div>
     </div>
