--- a/tabs.html
+++ b/tabs.html
@@ -3,215 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="tabs.css">
 </head>
 <body>
-    <div class="bg-light-gray p-40 pt-30">
-        <div class="mb-26 dotted-line-bottom tabs">
-            <div class="d-flex-center tab pb-20 pt-10 active" data-tab="videos">
-                <div class="mr-8 icons">
-                    <img src="assets/img/icons/arrow-right-black.svg">
-                    <img src="assets/img/icons/arrow-right-blue.svg">
+    <div class="tabs-container">
+        <div class="tabs">
+            <div class="tab active" data-tab="tab1">
+                <div class="icons">
+                    <img src="arrow-right-black.svg">
+                    <img src="arrow-right-blue.svg">
                 </div>
-                <div class="author-name-text blue">Videos</div>
+                <div class="heading">Tab1</div>
             </div>
-            <div class="d-flex-center tab pb-20 pt-10" data-tab="podcasts">
+            <div class="tab" data-tab="tab2">
                 <div class="mr-8 icons">
-                    <img src="assets/img/icons/audio-black.svg">
-                    <img src="assets/img/icons/audio-blue.svg">
+                    <img src="audio-black.svg">
+                    <img src="audio-blue.svg">
                 </div>
-                <div class="author-name-text blue">Podcasts</div>
+                <div class="heading">Tab2</div>
             </div>
         </div>
         <div class="tabs-items">
-            <div id="videos" class="tabs-item">
-                <div class="video-wrapper p-r mb-10">
-                    <video class="video" width="100%" height="auto" poster="assets/img/poster-3.png">
-                        <source src="assets/videos/v1.mp4" type="video/mp4">
-                    </video>
-                    <div class="play-pause">
-                        <div>Play</div>
-                    </div>
-                </div>
+            <div id="tab1" class="tabs-item">
+                Qwerty...
             </div>
-            <div id="podcasts" class="tabs-item none">
-                <div>
-                    <div class="podcasts-item mb-10 bg-white p-40 audio-wrapper">
-                        <audio controls>
-                            <source src="assets/audio/audio.mp3" type="audio/mpeg">
-                        </audio>
-                        <div class="play-pause-audio-btn">
-                            <div class="pause">
-                                <img src="assets/img/icons/pause.svg">
-                            </div>
-                            <div class="play">
-                                <img src="assets/img/icons/play-white.svg">
-                            </div>
-                        </div>
-                        <div class="audio-player">
-                            <div class="time">
-                                <div class="current">0:00</div>
-                                <div class="end">07:12</div>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress-line"><div class="dot"></div></div>
-                            </div>
-                            <div class="name">
-                                CBS Interview: We discuss Neural Integrative Blocks, values and authenticity
-                            </div>
-                        </div>
-                        <div class="end-btns">
-                            <div class="mr-15">
-                                <img src="assets/img/icons/sound.svg">
-                            </div>
-                            <div>
-                                <img src="assets/img/icons/download-black.svg">
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="podcasts-item mb-10 bg-white p-40">
-                        <div class="play-pause-audio-btn">
-                            <div class="play">
-                                <img src="assets/img/icons/pause.svg">
-                            </div>
-                            <div class="pause">
-                                <img src="assets/img/icons/play-white.svg">
-                            </div>
-                        </div>
-                        <div class="audio-player">
-                            <div class="time">
-                                <div class="current">4:40</div>
-                                <div class="end">14:50</div>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress-line"><div class="dot"></div></div>
-                            </div>
-                            <div class="name">
-                                mBraining Discussing forgiveness & relationships
-                            </div>
-                        </div>
-                        <div class="end-btns">
-                            <div class="mr-15">
-                                <img src="assets/img/icons/sound.svg">
-                            </div>
-                            <div>
-                                <img src="assets/img/icons/download-black.svg">
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="podcasts-item mb-10 bg-white p-40">
-                        <div class="play-pause-audio-btn">
-                            <div class="play">
-                                <img src="assets/img/icons/pause.svg">
-                            </div>
-                            <div class="pause">
-                                <img src="assets/img/icons/play-white.svg">
-                            </div>
-                        </div>
-                        <div class="audio-player">
-                            <div class="time">
-                                <div class="current">0:00</div>
-                                <div class="end">20:12</div>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress-line"><div class="dot"></div></div>
-                            </div>
-                            <div class="name">
-                                We discuss Neural Integrative Blocks, values and authenticity
-                            </div>
-                        </div>
-                        <div class="end-btns">
-                            <div class="mr-15">
-                                <img src="assets/img/icons/sound.svg">
-                            </div>
-                            <div>
-                                <img src="assets/img/icons/download-black.svg">
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="podcasts-item mb-10 bg-white p-40">
-                        <div class="play-pause-audio-btn">
-                            <div class="play">
-                                <img src="assets/img/icons/pause.svg">
-                            </div>
-                            <div class="pause">
-                                <img src="assets/img/icons/play-white.svg">
-                            </div>
-                        </div>
-                        <div class="audio-player">
-                            <div class="time">
-                                <div class="current">0:00</div>
-                                <div class="end">20:12</div>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress-line"><div class="dot"></div></div>
-                            </div>
-                            <div class="name">
-                                We discuss Neural Integrative Blocks, values and authenticity
-                            </div>
-                        </div>
-                        <div class="end-btns">
-                            <div class="mr-15">
-                                <img src="assets/img/icons/sound.svg">
-                            </div>
-                            <div>
-                                <img src="assets/img/icons/download-black.svg">
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="podcasts-item bg-white p-40">
-                        <div class="play-pause-audio-btn">
-                            <div class="play">
-                                <img src="assets/img/icons/pause.svg">
-                            </div>
-                            <div class="pause">
-                                <img src="assets/img/icons/play-white.svg">
-                            </div>
-                        </div>
-                        <div class="audio-player">
-                            <div class="time">
-                                <div class="current">0:00</div>
-                                <div class="end">20:12</div>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress-line"><div class="dot"></div></div>
-                            </div>
-                            <div class="name">
-                                We discuss Neural Integrative Blocks, values and authenticity
-                            </div>
-                        </div>
-                        <div class="end-btns">
-                            <div class="mr-15">
-                                <img src="assets/img/icons/sound.svg">
-                            </div>
-                            <div>
-                                <img src="assets/img/icons/download-black.svg">
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-
-                <nav class="navigation pagination mt-40" aria-label="Entries">
-                    <div class="nav-links">
-                        <ul class="page-numbers">
-                            <li><a class="prev page-numbers" href="">Prev.</a></li>
-                            <li><a class="page-numbers" href="">1</a></li>
-                            <li><span aria-current="page" class="page-numbers current">2</span></li>
-                            <li><a class="next page-numbers" href="">Next</a></li>
-                        </ul>
-                    </div>
-                </nav>
+            <div id="tab2" class="tabs-item none">
+                Qwerty...
             </div>
         </div>
     </div>
+    <script src="tabs.js"></script>
 </body>
 </html>
