new changes html

--- a/tabs.html
+++ b/tabs.html
@@ -15,22 +15,22 @@
                     <img src="/img/arrow-right-black.svg">
                     <img src="img/arrow-right-blue.svg">
                 </div>
-                <div class="heading">Tab1</div>
+                <div class="heading">Videos</div>
             </div>
             <div class="tab" data-tab="tab2">
                 <div class="mr-8 icons">
                     <img src="img/audio-black.svg">
                     <img src="img/audio-blue.svg">
                 </div>
-                <div class="heading">Tab2</div>
+                <div class="heading">Podcasts</div>
             </div>
         </div>
         <div class="tabs-items">
             <div id="tab1" class="tabs-item">
-                Qwerty1...
+                1
             </div>
             <div id="tab2" class="tabs-item none">
-                Qwerty2...
+                2
             </div>
         </div>
     </div>
