new changes html

--- a/tabs.html
+++ b/tabs.html
@@ -12,7 +12,7 @@
         <div class="tabs">
             <div class="tab active" data-tab="tab1">
                 <div class="icons">
-                    <img src="/img/arrow-right-black.svg">
+                    <img src="img/arrow-right-black.svg">
                     <img src="img/arrow-right-blue.svg">
                 </div>
                 <div class="heading">Videos</div>
